# pypdfmake

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release-github.yml
tests/: test_basic.py  test_columns.py  test_images.py  test_lists.py  test_margin.py  test_styles1.py  test_styles2.py  test_styles3.py  test_tables.py
