[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypdfmake"
version = "0.1.0"
description = "A Python library for generating pdfmake document definitions using Pydantic models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.11.4"]
authors = [{ name = "Jeff Bloss P.E./S.E.", email = "Jeff@prose-eng.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[dependency-groups]
dev = [
    "poethepoet>=0.34.0",
    "pytest>=8.3.5",
    "pytest-codeblocks>=0.17.0",
    "pytest-icdiff>=0.9",
    "rich>=14.0.0",
    "watchfiles>=1.0.5",
]

[tool.poe.tasks]
test = "watchfiles pytest"
test-no-watch = "pytest"


[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-x -vv -s --codeblocks"
